# shizuku

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  Makefile  README.md
crates/shizuku-codegen/: Cargo.toml
crates/shizuku-common/: Cargo.toml
crates/shizuku-common/src/: dmap.rs
crates/shizuku-ir/: Cargo.toml
crates/shizuku-ir/src/: lib.rs
crates/shizuku-parser/: Cargo.toml
crates/shizuku-parser/src/: lib.rs  span.rs  token.rs
crates/shizuku-parser/src/lexer/: mod.rs  number.rs  utils.rs
crates/shizuku-parser/src/parser/: parser.rs
crates/shizuku-parser/tests/lexer/: comment.rs  function.rs  mod.rs  number.rs  struct_define.rs
crates/shizuku-parser/tests/parser/: mod.rs
spec/grammar/: Makefile  README.md  grammar.peg  main.c  run_tests.sh
src/: lib.rs  main.rs  token.rs
src/ast/: ast.rs
src/lexer/: lexer.rs  mod.rs  number.rs  utils.rs
src/parser/: mod.rs  parser.rs
